--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         const questionsBank = [
             {
                 question: "Maria observou em seu jardim que as minhocas apareciam na superfície do solo após fortes chuvas. Qual é a principal razão para este comportamento das minhocas?",
-                image: "https://images.unsplash.com/photo-1578645510441-e1e5c0265d6c?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60",
+                image: "https://www.google.com/url?sa=i&url=https%3A%2F%2Fgloborural.globo.com%2Fvida-na-fazenda%2Fcomo-criar%2Fnoticia%2F2018%2F04%2Fcomo-criar-minhoca.html&psig=AOvVaw1Ajzgfw51OxQDxH3GGN8QR&ust=1758129153955000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCJilm8_j3Y8DFQAAAAAdAAAAABAE",
                 options: [
                     "Elas saem para se alimentar de folhas molhadas",
                     "As minhocas precisam de luz solar para realizar fotossíntese",
@@ -650,3 +650,4 @@
     </script>
 </body>
 </html>
+
