--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         const questionsBank = [
             {
                 question: "Maria observou em seu jardim que as minhocas apareciam na superfície do solo após fortes chuvas. Qual é a principal razão para este comportamento das minhocas?",
-                image: "https://www.google.com/url?sa=i&url=https%3A%2F%2Fgloborural.globo.com%2Fvida-na-fazenda%2Fcomo-criar%2Fnoticia%2F2018%2F04%2Fcomo-criar-minhoca.html&psig=AOvVaw1Ajzgfw51OxQDxH3GGN8QR&ust=1758129153955000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCJilm8_j3Y8DFQAAAAAdAAAAABAE",
+                image: "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjIc7NfsJduG5cS0UYV27jVKlUaXrmj3dyN81QGR-JBx__zmfC3c_bsWQ_VaxZxzxmR3GmBAPcE7YYpkoMt-KkCaVIc_2pYRXjgKqS6LZMdQAbKJHx5OvX3VK8UcUDR59uumU_P2ald_QMEPvMY7jfHDuBBAPcfv7ePRP1tVUwJ8x0meIwE32tsH_B71-j_/s780/thinkstockphotos-502037102.webp",
                 options: [
                     "Elas saem para se alimentar de folhas molhadas",
                     "As minhocas precisam de luz solar para realizar fotossíntese",
@@ -650,4 +650,5 @@
     </script>
 </body>
 </html>
+
 
